deploy/base/service_template.yaml
apiVersion: v1
kind: Service
metadata:
  name: np-app
spec:
  selector:
    app: np-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
